--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^7.3.1",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "node.js": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
