--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.12.3",
     "@mui/x-data-grid": "^6.19.11",
     "@mui/x-date-pickers": "^7.3.1",
+    "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
